syntax = "proto3";

// package netvuln.v1;
option go_package = "netvuln.v1";

service NetVulnService {
  rpc CheckVuln(CheckVulnRequest) returns (CheckVulnResponse);
}

message CheckVulnRequest {
  repeated string targets = 1; 
  repeated int32 tcp_port = 2; 
}

message CheckVulnResponse {  
  repeated TargetResult results = 1;
}

message TargetResult {
  string target = 1; 
  repeated Service services = 2;
}

message Service { 
  string name = 1;
  string version = 2;
  int32 tcp_port = 3;
  repeated Vulnerability vulns = 4;
}

message Vulnerability {
  string identifier = 1;
  float cvss_score = 2;
}
